@@ -1,19 +1,16 @@
 # Stage 1: Build the application
 FROM gradle:8.5-jdk17 AS build
-WORKDIR /app
-COPY . .
-COPY gradlew .
-COPY gradlew.bat .
-COPY settings.gradle.kts .
-COPY build.gradle.kts .
-COPY src src
-RUN chmod +x gradlew
-RUN ./gradlew build
+
+COPY --chown=gradle:gradle . /home/gradle/src
+WORKDIR /home/gradle/src
+RUN gradle build --no-daemon
+
+
 
 # Stage 2: Create the final image
 FROM openjdk:17-jdk-slim
-WORKDIR /app
-COPY --from=build /app/build/libs/map-0.0.1-SNAPSHOT.jar map.jar
+RUN mkdir /app
 
-EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "map.jar"]
+COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
+
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
